--- a/.user.ini
+++ b/.user.ini
@@ -1,3 +1,5 @@
-php
- pear
-phpinfo.php
+# (1.AZURE DIRECTORYは各環境により異なる)
+# (2.PEARをデプロイする先のディレクトリを指定する)
+include_path = '.;C:\DWASFiles\Sites\security-miyazaki\pear'
+# php4x→5のバージョン違いにより、警告が膨大に出力されてしまうため以下のように設定
+error_reporting=E_ALL & ~E_DEPRECATED & ~E_STRICT
